--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             <img src="https://images.unsplash.com/photo-1602848597941-0d3d3a2c1241?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=795&q=80" alt="vinyl" width="150px">
             <div class="song-content">
                 <h3>Title Track</h3>
-                <a href="#">Artist</a>
-                <a href="#">Album</a>
-                <button class="button" type="submit" id="save">Save</button>
+                <ul>
+                    <li><a href="#">Artist</a></li>
+                    <li><a href="#">Album</a></li>
+                </ul>
+                <button class="button" type="submit" id="save">Play</button>
             </div>
         </div>
        
