--- a/hands-on/index.html
+++ b/hands-on/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="./hands-on/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <title>Hands on Task</title>
   </head>
@@ -25,7 +25,7 @@
 
     <button type="button" id=calAvgBtn >Calc Average</button> 
 
-    <script src="./hands-on/index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
