add index.html hands-on section 1 ✔

--- a/hands-on/index.html
+++ b/hands-on/index.html
@@ -24,7 +24,8 @@
     
 
     <button type="button" id=calAvgBtn >Calc Average</button> 
-
+     
+    <!-- custom javascript file link  -->
     <script src="index.js"></script>
 
 </body>
