update index.html and style.css

--- a/section-1/index.html
+++ b/section-1/index.html
@@ -18,12 +18,12 @@
         
                 <div>
                     <label for="title">Title</label>
-                    <input class="form-input" type="text" id="title"/>
+                    <input class="form-title" type="text" id="title"/>
                 </div>
                 <br>
                 <div>
                     <label for="desc">Description</label>
-                    <input class="form-input" type="text" id="desc"/>
+                    <textarea class="form-title" name="desc"  rows="2" id="desc"></textarea>
                 </div>
                 
                 <input type="submit" value="Save">
